# AcceleratedJava

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build-windows.sh  build.sh  clean.sh  pom.xml
cmake/: Toolchain-mingw-w64.cmake
includes/: README
includes/jni/: README.md
src/main/c/: native.c  native.h  zlib_native.c  zlib_native.h
src/main/java/net/techcable/accelerated_java/: InvalidDataException.java
src/main/java/net/techcable/accelerated_java/compression/: CompressionType.java  Compressor.java  CompressorFactory.java  ZLibJDKCompressor.java  ZLibNativeCompressor.java
src/main/java/net/techcable/accelerated_java/jni/: Native.java  ZLibNative.java
src/main/java/net/techcable/accelerated_java/utils/: Arrays2.java  NativeLibrary.java  SimpleFormatter.java
src/test/java/net/techcable/accelerated_java/compression/: AbstractCompressorTest.java  JDKCompressorTest.java  NativeCompressorTest.java
